@@ -1,3 +1,7 @@
+* 2014-10-21 - marcus.klein@open-xchange.com
+
+ - Fix for bug 35109: Do not dispose kerberos tickets when sessions are moved over to long term session container.
+
 * 2014-10-21 - thorben.betten@open-xchange.com
 
  - Fix for bug 34947: Check for a possible unrecoverable socket error when attempting to load mail settings (esp. standard folders); signal an empty value instead of throwing an error
